--- a/contact.css
+++ b/contact.css
@@ -42,10 +42,10 @@
     margin-bottom: 40px;
 }
 .contact-details p {
-    font-size: 1.1em;
+    font-size: 1.5em;
     margin-bottom: 10px;
+    color: white;
 }
-
 .social-links ul {
     display: flex;
     justify-content: center;
@@ -55,6 +55,7 @@
 .social-links i {
     font-size: 1.5em;
     margin-right: 10px;
+
 }
 .resume-section {
     display: flex;
