--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header {
     background-size: cover;  /* Esto hará que la imagen cubra toda el área de la sección */
     background-repeat: no-repeat; /* Asegura que la imagen no se repita */
     background-position: center center; /* Esto centrará la imagen en el centro de la sección */
-    height: 200px;
+    height: 600px;
     width: 100%;
 }
 /* Ajustes en texto */
@@ -59,19 +59,6 @@ header {
     font-size: 24px; /* Tamaño de los íconos */
 }
 
-/* Estilos para la navegación */
-.about-link {
-    color: #800080; /* Esto es un morado común, puedes ajustarlo según prefieras */
-}
-
-.portfolio-link {
-    color: #FFC0CB; /* Rosa pálido, ajusta según prefieras */
-}
-
-.contact-link {
-    color: #008000; /* Verde, puedes ajustarlo según prefieras */
-}
-
 nav ul {
     display: flex;
     gap: 20px; /* Espacio entre enlaces */
@@ -88,4 +75,77 @@ nav ul li a {
 
 nav ul li a:hover {
     text-decoration: underline; /* Subrayado cuando pasas el ratón por encima */
+}
+.sticky {
+    background-color: rgba(0, 0, 0, 0.8); /* Puedes cambiar el color y la opacidad según prefieras */
+    transition: background-color 0.3s ease; /* Una transición suave al cambiar el color */
+}
+/* Estilos para dropdown-portafolio */
+.dropdown-portafolio {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #1A1A1A;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    width: 200px; 
+    border-radius: 4px; /* Bordes redondeados */
+    opacity: 0; /* Inicialmente será transparente */
+    transform: translateY(-20px); /* Movimiento inicial hacia arriba */
+    transition: opacity 0.3s, transform 0.3s; /* Transiciones para la opacidad y el movimiento */
+}
+
+.dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    transition: background 0.2s; /* Transición para el fondo al pasar el ratón */
+}
+
+.dropdown-content a:hover {
+    background: #333; /* Color de fondo al pasar el ratón */
+}
+
+.dropdown-portafolio:hover .dropdown-content {
+    display: block;
+    opacity: 1; /* Hace que el contenido sea visible */
+    transform: translateY(0); /* Mueve el contenido a su posición original */
+}
+.dropdown-portafolio > a {
+    color: #FFC0CB; /* Rosa pálido, ajusta según prefieras */
+}
+.dropdown-aboutme > a {
+    color: #800080; /* Esto es un morado común, puedes ajustarlo según prefieras */
+}
+.dropdown-contact > a {
+    color: #008000; /* Verde, puedes ajustarlo según prefieras */
+}
+.dropdown-aboutme {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content a:hover {
+    background: #333; /* Color de fondo al pasar el ratón */
+}
+
+.dropdown-aboutme:hover .dropdown-content {
+    display: block;
+    opacity: 1; /* Hace que el contenido sea visible */
+    transform: translateY(0); /* Mueve el contenido a su posición original */
+}
+.dropdown-contact {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-contact:hover .dropdown-content {
+    display: block;
+    opacity: 1; /* Hace que el contenido sea visible */
+    transform: translateY(0); /* Mueve el contenido a su posición original */
 }
