--- a/aboutme.css
+++ b/aboutme.css
@@ -2,7 +2,6 @@
 .about_me {
     display: flex; /* Convierte el contenedor en un contenedor flex */
     padding: 50px 30px;
-    background-color: #000000;
     color: #FFFFFF;
 }
 .about_me img {
@@ -19,7 +18,7 @@
 }
 .about_text h2 {
     margin-top: 20px;
-    color: #800080; /* Esto es un morado común */
+    color: #00FFFF;
 }
 .about_text p {
     margin-top: 40px;
@@ -27,8 +26,6 @@
 .skills {
     margin-left: 200px;
     padding: 20px;
-    background-color: #000000;  /* Color oscuro para que concuerde con la temática */
-    color: #FFF;  /* Texto en blanco para contraste */
 }
 
 .skills h3 {
@@ -54,7 +51,7 @@
 }
 
 .skills a {
-    color: #FFC0CB;  /* Rosa pálido para los enlaces de certificados */
+    color: white;
     text-decoration: none;  /* Sin subrayado */
 }
 
@@ -65,8 +62,6 @@
     margin-left: 200px;
     max-width: 800px;
     padding: 20px;
-    background-color: #000000;
-    color: #FFF;  /* Texto en blanco para contraste */
 }
 
 .hardware-skills h3 {
@@ -91,6 +86,5 @@
     font-size: 20px;
 }
 #about_me {
-    border-bottom: 1px solid yellow;
     min-height: 300px; /* o cualquier valor que sientas que sea adecuado */
 }
