cambios en info

--- a/contact.css
+++ b/contact.css
@@ -45,6 +45,7 @@
     font-size: 1.5em;
     margin-bottom: 10px;
     color: white;
+    font-weight: bold;
 }
 .social-links ul {
     display: flex;
